@@ -1,3 +1,9 @@
+2004-04-30  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	Add " to the list of characters to strip for sane paths.
+	Fix a crash when the user skips writing every track if they already exist.
+
 2004-04-16  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
